force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/Cloudrop__MassMailer_Email_Verify_Status__c.object-meta.xml
<CustomObject>
    <description>This object holds the verification status for email or phone.</description>
    <label>MassMailer Verify Status</label>
    <nameField>
        <label>MassMailer Email Verify Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MassMailer Verify Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>