force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Account__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Account__c</fullName>
    <label>Email Account</label>
    <length>250</length>
    <type>Text</type>
</CustomField>