force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MassMailer_Email_Verify_Statuss</relationshipName>
    <type>Lookup</type>
</CustomField>