force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Address__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Address__c</fullName>
    <label>Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>