force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Case__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>MassMailer_Email_Status</relationshipName>
    <type>Lookup</type>
</CustomField>