force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Domain_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Domain_Age_Days__c</fullName>
    <label>Domain Age Days</label>
    <length>250</length>
    <type>Text</type>
</CustomField>