force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__First_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__First_Name__c</fullName>
    <label>First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>