force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Free_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Free_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Email</label>
    <type>Checkbox</type>
</CustomField>