force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Gender__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Gender__c</fullName>
    <label>Gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>