force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>