force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Lead__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>MassMailer_Email_Status</relationshipName>
    <type>Lookup</type>
</CustomField>