force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__MassMailer_Verification_Job__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__MassMailer_Verification_Job__c</fullName>
    <label>MassMailer Verification Job</label>
    <referenceTo>Cloudrop__MassMailer_Email_Verification_Jobs__c</referenceTo>
    <relationshipLabel>MassMailer Verify Status</relationshipLabel>
    <relationshipName>MassMailer_Verify_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>