force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Mx_Record__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Mx_Record__c</fullName>
    <label>Mx Record</label>
    <length>250</length>
    <type>Text</type>
</CustomField>