force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Processed_At__c</fullName>
    <label>Processed At</label>
    <length>250</length>
    <type>Text</type>
</CustomField>