force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Raw_Response__c</fullName>
    <label>Raw Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>