force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>