force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Smtp_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Smtp_Provider__c</fullName>
    <label>Smtp Provider</label>
    <length>250</length>
    <type>Text</type>
</CustomField>