force-app/main/default/objects/Cloudrop__MassMailer_Email_Verify_Status__c/fields/Cloudrop__Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Status__c</fullName>
    <label>Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>